// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset default 1`] = `
<div>
  <fieldset
    class="p-fieldset p-component"
    data-pc-name="fieldset"
    data-pc-section="root"
    id="pr_id_1"
  >
    <div
      aria-labelledby="pr_id_1_header"
      class="p-toggleable-content"
      data-pc-section="toggleablecontent"
      id="pr_id_1_content"
      role="region"
    >
      <div
        class="p-fieldset-content"
        data-pc-section="content"
      />
    </div>
  </fieldset>
</div>
`;

exports[`Fieldset legend 1`] = `
<div>
  <fieldset
    class="p-fieldset p-component"
    data-pc-name="fieldset"
    data-pc-section="root"
    id="fieldset"
  >
    <legend
      class="p-fieldset-legend p-unselectable-text"
      data-pc-section="legend"
    >
      <span
        class="p-fieldset-legend-text"
        data-pc-section="legendtitle"
        id="fieldset_header"
      >
        Simple Fieldset
      </span>
    </legend>
    <div
      aria-labelledby="fieldset_header"
      class="p-toggleable-content"
      data-pc-section="toggleablecontent"
      id="fieldset_content"
      role="region"
    >
      <div
        class="p-fieldset-content"
        data-pc-section="content"
      >
        Content
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Fieldset when Fieldset is toggleable it must expand and collapse: expandable-open 1`] = `
<div>
  <fieldset
    class="p-fieldset p-component p-fieldset-toggleable"
    data-pc-name="fieldset"
    data-pc-section="root"
    id="pr_id_3"
  >
    <legend
      class="p-fieldset-legend p-unselectable-text"
      data-pc-section="legend"
    >
      <a
        aria-controls="pr_id_3_content"
        aria-expanded="true"
        aria-label="Expand/Collapse"
        data-pc-section="toggler"
        id="pr_id_3_header"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="p-icon p-fieldset-toggler"
          data-pc-section="togglericon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.2222 7.77778H0.777778C0.571498 7.77778 0.373667 7.69584 0.227806 7.54998C0.0819442 7.40412 0 7.20629 0 7.00001C0 6.79373 0.0819442 6.5959 0.227806 6.45003C0.373667 6.30417 0.571498 6.22223 0.777778 6.22223H13.2222C13.4285 6.22223 13.6263 6.30417 13.7722 6.45003C13.9181 6.5959 14 6.79373 14 7.00001C14 7.20629 13.9181 7.40412 13.7722 7.54998C13.6263 7.69584 13.4285 7.77778 13.2222 7.77778Z"
            fill="currentColor"
          />
        </svg>
        <span
          class="p-fieldset-legend-text"
          data-pc-section="legendtitle"
        >
          Expand/Collapse
        </span>
      </a>
    </legend>
    <div
      aria-labelledby="pr_id_3_header"
      class="p-toggleable-content"
      data-pc-section="toggleablecontent"
      id="pr_id_3_content"
      role="region"
    >
      <div
        class="p-fieldset-content"
        data-pc-section="content"
      >
        <p>
          Lorem ipsum dolor sit amet
        </p>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Fieldset when Fieldset is toggleable it will toggle when clicked: toggleable-open 1`] = `
<div>
  <fieldset
    class="p-fieldset p-component p-fieldset-toggleable"
    data-pc-name="fieldset"
    data-pc-section="root"
    id="pr_id_2"
  >
    <legend
      class="p-fieldset-legend p-unselectable-text"
      data-pc-section="legend"
    >
      <a
        aria-controls="pr_id_2_content"
        aria-expanded="true"
        aria-label="Toggleable"
        data-pc-section="toggler"
        id="pr_id_2_header"
        role="button"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="p-icon p-fieldset-toggler"
          data-pc-section="togglericon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.2222 7.77778H0.777778C0.571498 7.77778 0.373667 7.69584 0.227806 7.54998C0.0819442 7.40412 0 7.20629 0 7.00001C0 6.79373 0.0819442 6.5959 0.227806 6.45003C0.373667 6.30417 0.571498 6.22223 0.777778 6.22223H13.2222C13.4285 6.22223 13.6263 6.30417 13.7722 6.45003C13.9181 6.5959 14 6.79373 14 7.00001C14 7.20629 13.9181 7.40412 13.7722 7.54998C13.6263 7.69584 13.4285 7.77778 13.2222 7.77778Z"
            fill="currentColor"
          />
        </svg>
        <span
          class="p-fieldset-legend-text"
          data-pc-section="legendtitle"
        >
          Toggleable
        </span>
      </a>
    </legend>
    <div
      aria-labelledby="pr_id_2_header"
      class="p-toggleable-content"
      data-pc-section="toggleablecontent"
      id="pr_id_2_content"
      role="region"
    >
      <div
        class="p-fieldset-content"
        data-pc-section="content"
      >
        <p>
          Lorem ipsum dolor sit amet
        </p>
      </div>
    </div>
  </fieldset>
</div>
`;
